--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     CoffeeTime nace en 1994 en Argentina, cuando una familia decide colocar
     un emprendimiento de algo que amaban mucho: <strong>el café</strong>.
     Con ayuda de una receta de la abuela, lograron crear lo que hoy conocemos
-    como Cappuccino helado, nombre que le colocaron en honor al apellido de ella:
+    como Cappuccino, nombre que le colocaron en honor al apellido de ella:
     "Cappucci". Alrededor de 2001, CoffeeTime ya era una empresa multinacional, exportando café para más de 20 países latinoamericanos. 
     ¡Te invitamos a conocernos! Estamos seguros que no te arrepentirás.</p></div>
     </section>
