--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     Con ayuda de una receta de la abuela, lograron crear lo que hoy conocemos
     como Cappuccino helado, nombre que le colocaron en honor al apellido de ella:
     "Cappucci". Alrededor de 2001, CoffeeTime ya era una empresa multinacional, exportando café para más de 20 países latinoamericanos. 
-    ¡Te invitamos a conocernos! Estamos seguros que no te arrepentirás.</p></div>
+    ¡Te invitamos a conocernos! Estamos seguros que no te arrepentirás.</p>
     </section>
 
     <section class="contenedor" id="intro-productos">
@@ -127,22 +127,21 @@
 
 <section id="contactar">
     <div class="formulario">
-        <h2>Contáctanos</h2>
-        <p>Por cualquier consulta, completa el siguiente formulario:</p>
+        <h2>CONTÁCTANOS</h2>
         <form action="" method="post">
             <div class="espaciado">
-                <label for="nombre-y-apellido">Nombre y apellido:</label>
+                <label id="titulo-form" for="nombre-y-apellido">Nombre y apellido:</label>
                 <input type="text" name="nombre-y-apellido" id="nombre-y-apellido" required placeholder="Ingresa tu nombre y apellido*">
             </div>
             <div class="espaciado">
-                <label for="correo-electronico">Correo electrónico:</label>
+                <label id="titulo-form" for="correo-electronico">Correo electrónico:</label>
                 <input type="email" name="correo-electronico" id="correo-electronico" required placeholder="Ingresa tu correo electrónico*">
             </div>
             <div class="espaciado">
-                <label for="escribe-tu-consulta">Escribe tu consulta:</label>
-                <textarea name="escribe-tu-consulta" id="escribe-tu-consulta" cols="30" rows="10" placeholder="Ingresa tu consulta"></textarea>
+                <label id="titulo-form" for="escribe-tu-consulta">Escribe tu consulta:</label>
+                <textarea name="escribe-tu-consulta" id="escribe-tu-consulta" cols="30" rows="10" placeholder="Ingresa tu consulta..."></textarea>
             </div>
-            <div class="espaciado">
+            <div class="botones">
                 <button type="submit" class="enviar">Enviar consulta</button>
                 <button type="reset" class="borrar">Borrar campos</button>
             </div>
